--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -1,10 +1,19 @@
-.container{
-    width: 100%;
+.container {
+  display: flex;
+  justify-content: center;
 }
 
-.container h1{
-    color: white;
-    margin-bottom: 0px;
-    width: 100%;
-    text-align: center;
+.container h1 {
+  color: white;
+  margin-left: 10px;
+}
+
+.container .shop-icon {
+  width: 50px;
+  height: 50px;
+}
+
+.container .shop-icon img {
+  width: 100%;
+  height: 100%;
 }
