--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,6 @@ body {
 .ant-select-dropdown {
   width: 600px !important;
 }
+.select_product_table .ant-select-dropdown{
+  width: 200px !important;
+}
